# NFL_Prediction_Assignment

./: README.md
nfl_prediction_assignment/: .gitignore  README.md  pyproject.toml
nfl_prediction_assignment/db/: chroma.sqlite3
nfl_prediction_assignment/knowledge/Kaggle_Data/: NFLInjuries2012_2017.csv  games.csv
nfl_prediction_assignment/knowledge/SportsRadar_API/current_season_schedule/: current_season_schedule.json
nfl_prediction_assignment/knowledge/SportsRadar_API/nfl_injuries/2023/: nfl_injuries_2023_PRE_week1.json  nfl_injuries_2023_PRE_week2.json  nfl_injuries_2023_PRE_week3.json  nfl_injuries_2023_PST_week4.json  nfl_injuries_2023_REG_week1.json  nfl_injuries_2023_REG_week2.json  nfl_injuries_2023_REG_week3.json  nfl_injuries_2023_REG_week4.json  nfl_injuries_2023_REG_week5.json  nfl_injuries_2023_REG_week6.json  (+1 more)
nfl_prediction_assignment/knowledge/SportsRadar_API/teams/: teams_info.json
nfl_prediction_assignment/output/: coaching_strategy_report.md  current_season_performance_report.md  environmental_impact_report.md  final_report.md  head_to_head_analysis_report.md  injury_analysis_report.md  performance_summary_report.md  team_changes_report.md  trend_analysis_report.md
nfl_prediction_assignment/src/nfl_prediciton_assistant/: config_generator.py  crew.py  main.py
nfl_prediction_assignment/src/nfl_prediciton_assistant/config/: agents.yaml  base_config.yaml  tasks.yaml
nfl_prediction_assignment/src/nfl_prediciton_assistant/tools/: custom_csvsearch.py  custom_embedder.py  custom_jsonsearch.py  custom_retrieval.py  custom_websearch.py
(+137 files in other folders)
