[project]
name = "nfl_prediciton_assistant"
version = "0.1.0"
description = "nfl_prediciton_assistant using crewAI"
authors = [{ name = "Sachin Patalasingh", email = "sachinpatalasingh@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "ollama>=0.4.5",
]

[project.scripts]
nfl_prediciton_assistant = "nfl_prediciton_assistant.main:run"
run_crew = "nfl_prediciton_assistant.main:run"
train = "nfl_prediciton_assistant.main:train"
replay = "nfl_prediciton_assistant.main:replay"
test = "nfl_prediciton_assistant.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
